Fixing alignment for mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,11 @@
     list-style: none;
 
 }
+html {
+    width: 100%;
+    height: 100%;
+}
+
 html, body {
     /* width: 100%;
     height: 100%; */
@@ -130,7 +135,7 @@ button:hover {
 }
 .hero-h3 {
     display: flex;
-    text-align: center;
+    text-align: left;
     color: #FFFFFF;
     font-size: 35px;
     font-weight: 300;
@@ -415,7 +420,6 @@ footer #nav-links li a:hover {
     font-weight: 500;
 }
 
-
 /* @media only screen and (max-width: 1600px){
     .featured {
         padding: 50px 50px;
@@ -433,6 +437,51 @@ footer #nav-links li a:hover {
     }
     header {
         padding: 1rem 3rem; 
-
 }
 
+@media only screen and (max-width: 580px) {
+    .hero-h2 {
+        display: flex;
+        text-align: center;
+        flex-wrap: wrap;
+        color: #FFFFFF;
+        font-size: 45px;
+        font-weight: 500;
+        justify-content: center;
+        padding-top: 3rem;
+    }
+    .hero-h3 {
+        display: flex;
+        text-align: center;
+        flex-wrap: wrap;
+        color: #FFFFFF;
+        font-size: 35px;
+        font-weight: 300;
+        justify-content: center;
+        padding-bottom: 3rem;
+    }
+    .rda-mockup {
+        /* width: 100%; */
+        height: 20rem;
+        object-fit: contain;
+    }
+    .cer-mockup {
+        /* width: 100%; */
+        height: 20rem;
+        object-fit: contain;
+    }
+    .tennant-mockup {
+        /* width: 100%; */
+        height: 30rem;
+        object-fit: contain;
+        margin-right: 2rem;
+    }
+    .col-xs-12 {
+        width: 100%;
+    }
+    .text-xs-center {
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+}
